haxe (1:4.1.0-1) unstable; urgency=medium

  * New upstream version.
  * Add version.ml.diff patch to avoid usage of git during build.

 -- Andy Li <andy@onthewings.net>  Thu, 21 May 2020 09:41:40 +0800

haxe (1:4.0.5-1) unstable; urgency=medium

  * New upstream version.

 -- Andy Li <andy@onthewings.net>  Wed, 18 Dec 2019 03:29:59 +0800

haxe (1:4.0.3-1) unstable; urgency=medium

  * New upstream version.

 -- Andy Li <andy@onthewings.net>  Fri, 29 Nov 2019 23:31:54 +0800

haxe (1:4.0.2-1) unstable; urgency=medium

  * New upstream version.

 -- Andy Li <andy@onthewings.net>  Tue, 12 Nov 2019 12:37:34 +0800

haxe (1:4.0.1-1) unstable; urgency=medium

  * New upstream version.
    + Safe-strings compatible (Closes: #939961).
  * Remove camlp5.diff, which is no longer needed.
  * Bump Standards-Version to 4.4.1 (no changes).

 -- Andy Li <andy@onthewings.net>  Sun, 10 Nov 2019 21:25:41 +0800

haxe (1:3.4.7-2) unstable; urgency=medium

  * Add camlp5.diff that replaces camlp4 with camlp5 (#933722).
  * Use https for Homepage.
  * Bump Standards-Version to 4.4.0 (no changes).

 -- Andy Li <andy@onthewings.net>  Mon, 12 Aug 2019 10:38:36 +0800

haxe (1:3.4.7-1) unstable; urgency=low

  * New upstream version.
  * Bump Standards-Version to 4.1.3 (no changes).

 -- Andy Li <andy@onthewings.net>  Mon, 26 Mar 2018 09:55:24 +0800

haxe (1:3.4.4-2) unstable; urgency=low

  * Use dh_ocaml for ocamlopt detection.
  * Remove redundant ocaml-best-compilers, ocaml-native-compilers depends.
  * Add dh_missing.
  * Add autopkgtest support.

 -- Andy Li <andy@onthewings.net>  Tue, 21 Nov 2017 15:30:27 +0800

haxe (1:3.4.4-1) unstable; urgency=medium

  * New upstream version.
    + Fix flash target broken when compiled with OCaml 4.05.
  * Bump Standards-Version to 4.1.1 (no changes).
  * Update d/rules to use /usr/share/dpkg/pkg-info.mk to get source version.
  * Update d/watch to use the GitHub latest release page to avoid getting
    pre-release version.
