@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Andy Li <andy@onthewings.net>
 Standards-Version: 4.4.1
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10),
                dh-ocaml,
                ocaml-nox,
                ocaml-findlib,
